--- a/healthez_site/healthez_app/templates/Input_o.html
+++ b/healthez_site/healthez_app/templates/Input_o.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" >
     {% load static %}
-    <link rel="stylesheet" href="{% static 'gamers.css' %}">
-    {% load static %}
     <link rel="stylesheet" href="{% static 'default.css' %}">
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap" rel="stylesheet">
     <title>HealthEz</title>
@@ -18,8 +15,7 @@
     <div class="navi">
       <header id="header">
         <div>
-      {% load static %}
-      <img id="logo" img src="{% static 'images/healthez_logo.png' %}" alt="healthez logo">
+          <img id="logo" src="images/healthez_logo.png" alt="healthez logo">
         </div>
         <nav id="nav-bar">
           <ul>
