--- a/healthez_site/healthez_app/static/gamers_o.css
+++ b/healthez_site/healthez_app/static/gamers_o.css
@@ -76,15 +76,17 @@ label{
 
 
 .remove_btn{
-    border:transparent;
-    color: transparent;
-    background: transparent;
+    border:2px solid #fff;
+    color: #2c3e50;
+    background: #fff;
+    padding: 15px 50px;
     text-transform: uppercase;
     font-weight: bold;
+    font-size: 16px;
     cursor: pointer;
     transition: 0.8s all;
 }
 .remove_btn:hover{
-    background: red;
+    background: #2c3e50;
     color: #fff;
 }
