--- a/healthez_site/healthez_app/static/item_style.css
+++ b/healthez_site/healthez_app/static/item_style.css
@@ -2,11 +2,14 @@
 
 :root {
     --mainColor: #00C922;
-    --header-font: 'Poppins', sans-serif;
     --background-color: #FFFAEB;
 }
 
 /* Base */
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
 
 html {
     scroll-behavior: smooth;
@@ -23,20 +26,14 @@ body {
 }
 
 a {
-    font-family: var(--header-font);
     color: #fff;
     text-decoration: none;
     font-size: 20px;
 }
 
 h1 {
-    font-family: var(--header-font);
     text-align: center;
     padding-top: 50px;
-}
-
-p {
-    font-family: var(--header-font);
 }
 
 /* HEADER */
@@ -70,7 +67,6 @@ p {
 .nav-link {
     color: black;
     padding-right: 20px;
-    font-family: var(--header-font);
     opacity: 1;
 }
 
@@ -88,7 +84,7 @@ p {
 
 /* FOOD LIST */
 
-#Food-List {
+#food-list {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -108,8 +104,6 @@ input {
     border-radius: 50px;
     cursor: pointer;
     border: none;
-    font-family: var(--header-font);
-    box-shadow: 5px 10px 18px #0000006e;
     transition: all .2s ease-in-out;
 }
 
@@ -120,25 +114,22 @@ input {
     justify-items: center;
     margin-left: 25%;
     margin-right: 25%;
+    padding: 50px;
+}
+
+.food-item {
+    padding-bottom: 100px;
+}
+
+#food-list>img {
+    border-radius: 50%;
 }
 
 /* Media Query */
 
-@media screen and (max-width: 1800px) {
+@media screen and (max-width: 1920px) {
     #nav-bar {
         width: 90%;
         left: 0;
     }
-}
-
-.item_style{
-    font-family: 'Poppins', sans-serif;
-    letter-spacing: 3px;
-    
-}
-
-.food{
-    max-width: 100%;
-  height: auto;
-    border-radius: 50%;
 }
