--- a/healthez_site/healthez_app/templates/item_select.html
+++ b/healthez_site/healthez_app/templates/item_select.html
@@ -21,8 +21,7 @@
   <!-- NAV BAR-->
   <header id="header">
     <div>
-      {% load static %}
-      <img id="logo" src="{% static 'images/healthez_logo.png' %}" alt="healthez logo">
+      <img id="logo" src="images/healthez_logo.png" alt="healthez logo">
     </div>
     <nav id="nav-bar">
       <ul>
@@ -41,27 +40,30 @@
 
   <div class="food-list-container">
 
-    <ul id="Food-List">
+    <div class="food-item">
+    <ul id="food-list">
       {% for item in search_items %}
 
       <!-- PICTURE OF ITEM-->
       <img img src="{{ item.img_url }}" alt="{{item.name}} logo">
+      <br>
 
       <!-- NAME OF ITEM -->
       <li>{{ item.title }}</li>
+      <br>
 
       <!-- ADD BUTTON -->
       <form action="/addItem/{{item.id}}" style="display:inline;" method="POST">{% csrf_token %}
         <input type="submit" value="ADD">
       </form>
+      <br>
+      <br>
 
       {% endfor %}
     </ul>
   </div>
 
-
-
-
+  </div>
 </body>
 
 </html>
