--- a/healthez_site/healthez_app/static/default.css
+++ b/healthez_site/healthez_app/static/default.css
@@ -2,11 +2,14 @@
 
 :root {
     --mainColor: #00C922;
-    --header-font: 'Poppins', sans-serif;
     --background-color: #FFFAEB;
 }
 
 /* Base */
+
+* {
+    font-family: 'Poppins', sans-serif
+}
 
 html {
     scroll-behavior: smooth;
@@ -23,20 +26,14 @@ body {
 }
 
 a {
-    font-family: var(--header-font);
-    color: #fff;
     text-decoration: none;
     font-size: 20px;
 }
 
 h1 {
-    font-family: var(--header-font);
     text-align: center;
 }
 
-p {
-    font-family: var(--header-font);
-}
 
 /* HEADER */
 
@@ -69,7 +66,6 @@ p {
 .nav-link {
     color: black;
     padding-right: 20px;
-    font-family: var(--header-font);
     opacity: 1;
 }
 
@@ -99,7 +95,6 @@ ul {
     border-radius: 50px;
     cursor: pointer;
     border: none;
-    font-family: var(--header-font) !important;
     box-shadow: 5px 10px 18px #0000006e;
     transition: all .2s ease-in-out;
 }
@@ -132,11 +127,9 @@ ul {
     transform: translate(-50%, -50%);
 }
 
-/* About */
+.main-containerHome > .get-started > 
 
-#About {
-    background-color: var(--background-color);
-}
+/* About */
 
 .main-container {
     margin: 0 auto;
@@ -157,4 +150,42 @@ ul {
 
 .subtext {
     text-align: center;
+}
+
+/* Media Query */
+
+@media screen and (max-width: 1800px) {
+    .main-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        max-width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        overflow-x: hidden;
+    }
+    #nav-bar {
+        width: 90%;
+        left: 0;
+    }
+}
+
+@media screen and (max-width: 1700px) {
+    .get-started {
+        top: 70%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .home-main>h1 {
+        font-size: 40px;
+        padding-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .home-main>h1 {
+        font-size: 30px;
+    }
 }
