--- a/healthez_site/healthez_app/static/default.css
+++ b/healthez_site/healthez_app/static/default.css
@@ -41,6 +41,10 @@ h1 {
 }
 
 #header {
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100px;
     display: flex;
     flex-direction: row;
     background-color: #FFFAEB;
