add html linking

--- a/healthez_site/healthez_app/templates/Index.html
+++ b/healthez_site/healthez_app/templates/Index.html
@@ -41,7 +41,7 @@
         <h1>The easy way to be healthy</h1>
       </div>
       <div class="get-started">
-        <button class="button"><a href=""><b>Get Started</b></a></button>
+        <button class="button"><a href="../form"><b>Get Started</b></a></button>
       </div>
       {% load static %}
       <img src="{% static 'images/grocery_stock.png' %}" alt="grocery" style="width:100%; height: 100%;">
