--- a/healthez_site/healthez_app/templates/item_select.html
+++ b/healthez_site/healthez_app/templates/item_select.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {% load static %}
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
   <title>HealthEz</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="item_style.css">
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'item_style.css' %}">
 </head>
 
 <body>
@@ -20,12 +20,13 @@
   <!-- NAV BAR-->
   <header id="header">
     <div>
-      <img id="logo" src="images/healthez_logo.png" alt="healthez logo">
+      {% load static %}
+      <img id="logo" img src="{% static 'images/healthez_logo.png' %}" alt="healthez logo">
     </div>
     <nav id="nav-bar">
       <ul>
         <li>
-          <a class="nav-link" href="Input.html"><b>Go back</b></a>
+          <a class="nav-link" href="../form"><b>Go back</b></a>
         </li>
       </ul>
     </nav>
@@ -44,9 +45,6 @@
         <img img src="{{ item.img_url }}" id="myImage" width="231" height="231" alt="{{item.name}} logo">
         <br>
 
-        <img img src="images/grocery_stock.png" id="myImage" width="231" height="231" alt="{{item.name}} logo">
-
-
         <!-- NAME OF ITEM -->
         <li>{{ item.title }}</li>
         <br>
@@ -70,8 +68,6 @@
         <img img src="{{ item.img_url }}" id="myImage" width="231" height="231" alt="{{item.name}} logo">
         <br>
 
-        <img img src="images/grocery_stock.png" id="myImage" width="231" height="231" alt="{{item.name}} logo">
-
 
         <!-- NAME OF ITEM -->
         <li>{{ item.title }}</li>
@@ -96,8 +92,6 @@
         <!-- PICTURE OF ITEM-->
         <img img src="{{ item.img_url }}" id="myImage" width="231" height="231" alt="{{item.name}} logo">
         <br>
-
-        <img img src="images/grocery_stock.png" id="myImage" width="231" height="231" alt="{{item.name}} logo">
 
 
         <!-- NAME OF ITEM -->
