--- a/healthez_site/static_root/default.css
+++ b/healthez_site/static_root/default.css
@@ -34,7 +34,6 @@ h1 {
     text-align: center;
 }
 
-
 /* HEADER */
 
 #logo {
@@ -42,6 +41,10 @@ h1 {
 }
 
 #header {
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100px;
     display: flex;
     flex-direction: row;
     background-color: #FFFAEB;
@@ -60,13 +63,13 @@ h1 {
     align-items: center;
     position: relative;
     left: 72%;
-    padding-right: 20px;
 }
 
 .nav-link {
     color: black;
     padding-right: 20px;
     opacity: 1;
+    margin-right: 20px;
 }
 
 .nav-link:hover {
@@ -127,7 +130,9 @@ ul {
     transform: translate(-50%, -50%);
 }
 
-.main-containerHome > .get-started > 
+.get-started>button>a>b {
+    color: white;
+}
 
 /* About */
 
@@ -169,9 +174,6 @@ ul {
         width: 90%;
         left: 0;
     }
-}
-
-@media screen and (max-width: 1700px) {
     .get-started {
         top: 70%;
     }
@@ -182,10 +184,20 @@ ul {
         font-size: 40px;
         padding-bottom: 20px;
     }
+    .get-started {
+        width: 60%;
+        top: 70%;
+    }
 }
 
 @media screen and (max-width: 700px) {
     .home-main>h1 {
         font-size: 30px;
+    }
+    .get-started {
+        top: 75%;
+    }
+    .get-started>button>a {
+        font-size: 15px;
     }
 }
