--- a/healthez_site/static_root/item_style.css
+++ b/healthez_site/static_root/item_style.css
@@ -9,6 +9,8 @@
 
 * {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -26,14 +28,12 @@ body {
 }
 
 a {
-    color: #fff;
     text-decoration: none;
     font-size: 20px;
 }
 
 h1 {
     text-align: center;
-    padding-top: 50px;
 }
 
 /* HEADER */
@@ -43,6 +43,10 @@ h1 {
 }
 
 #header {
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100px;
     display: flex;
     flex-direction: row;
     background-color: #FFFAEB;
@@ -61,13 +65,13 @@ h1 {
     align-items: center;
     position: relative;
     left: 72%;
-    padding-right: 20px;
 }
 
 .nav-link {
     color: black;
     padding-right: 20px;
     opacity: 1;
+    margin-right: 20px;
 }
 
 .nav-link:hover {
@@ -75,7 +79,7 @@ h1 {
     opacity: 1;
 }
 
-#nav-bar>ul {
+ul {
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -90,6 +94,7 @@ h1 {
     justify-content: center;
     align-items: center;
     list-style: none;
+    padding: 0;
 }
 
 input {
@@ -108,13 +113,11 @@ input {
 }
 
 .food-list-container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
     align-items: center;
-    justify-items: center;
-    margin-left: 25%;
-    margin-right: 25%;
-    padding: 50px;
+    width: 100%;
 }
 
 .food-item {
@@ -125,11 +128,25 @@ input {
     border-radius: 50%;
 }
 
+#myImage {
+    width: 231px;
+    height: 231px;
+}
+
 /* Media Query */
 
 @media screen and (max-width: 1920px) {
     #nav-bar {
         width: 90%;
         left: 0;
+    }
+}
+
+@media screen and (max-width: 1600px) {
+    .food-list-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
