--- a/healthez_site/healthez_app/static/gamers.css
+++ b/healthez_site/healthez_app/static/gamers.css
@@ -6,12 +6,14 @@
 body{
     color: black;
     background: #FFFAEB;
+    
 }
 
 h1{
     font-size: 40px;
     margin:0;
     padding: 0;
+    position: static;
     text-align: center;
     text-transform: uppercase;
 }
@@ -115,8 +117,8 @@ label{
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #4CAF50;
-  color: white;
+  background-color: transparent;
+  color: black;
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -132,7 +134,9 @@ label{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: transparent;
+top: 0px;
+ right: 477px;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -141,16 +145,16 @@ label{
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+    font-size: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: #00C922;}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: #00C922; border: transparent;}
