--- a/healthez_site/static_root/item_style.css
+++ b/healthez_site/static_root/item_style.css
@@ -114,7 +114,7 @@ input {
 
 .food-list-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 3fr 1fr;
     justify-content: center;
     align-items: center;
     width: 100%;
