--- a/healthez_site/healthez_app/templates/item_select.html
+++ b/healthez_site/healthez_app/templates/item_select.html
@@ -31,15 +31,22 @@
       </ul>
     </nav>
   </header>
-
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
   <h1>Choose an item to add to your list</h1>
+  <br>
 
   <div class="food-list-container">
 
     <div class="food-item">
       <ul id="food-list">
-        {% for item in search_items %}
+        {% for item in col1 %}
 
         <!-- PICTURE OF ITEM-->
         <img img src="{{ item.img_url }}" id="myImage" width="231" height="231" alt="{{item.name}} logo">
@@ -62,7 +69,7 @@
 
     <div class="food-item">
       <ul id="food-list">
-        {% for item in search_items %}
+        {% for item in col2 %}
 
         <!-- PICTURE OF ITEM-->
         <img img src="{{ item.img_url }}" id="myImage" width="231" height="231" alt="{{item.name}} logo">
@@ -87,7 +94,7 @@
 
     <div class="food-item">
       <ul id="food-list">
-        {% for item in search_items %}
+        {% for item in col3 %}
 
         <!-- PICTURE OF ITEM-->
         <img img src="{{ item.img_url }}" id="myImage" width="231" height="231" alt="{{item.name}} logo">
