--- a/healthez_site/healthez_app/templates/details.html
+++ b/healthez_site/healthez_app/templates/details.html
@@ -41,7 +41,8 @@
   <br>
   <br>
   <br>
-
+  <!-- PICTURE OF ITEM-->
+  <img img src="{{ img_url }}" id="food_image" width="231" height="231" alt="{{item.name}} image">
   
   Food item: {{obj.title}}
   {{obj.description}}
