--- a/healthez_site/healthez_app/static/details_style.css
+++ b/healthez_site/healthez_app/static/details_style.css
@@ -35,6 +35,10 @@ h1 {
     text-align: center;
 }
 
+p {
+    text-align: left;
+}
+
 /* HEADER */
 
 #logo {
@@ -96,6 +100,10 @@ ul {
     padding-right: 25%;
 }
 
+.left {
+    padding-left: 30%;
+}
+
 .info {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -105,8 +113,8 @@ ul {
     border-radius: 50%;
 }
 
-.bullets > ul {
+.horizontal > h3 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
