--- a/healthez_site/healthez_app/templates/images_result.html
+++ b/healthez_site/healthez_app/templates/images_result.html
@@ -16,7 +16,7 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'default.css' %}">
   {% load static %}
-  <link rel="stylesheet" href="{% static 'images.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'mike.css' %}">
 </head> 
 <body> 
 
@@ -45,22 +45,53 @@
     <br>
     
     <div class="beyblade"> 
-        <h1>Upload Here</h1>
+        <h1>Upload Image</h1>
     </div>
     <h1>
 
-    
-    
     <div class="upload_btn">
     <form method = "post" enctype="multipart/form-data"> 
         {% csrf_token %}
-    {{ form.as_p }} 
+        <br>
+      <button class="speedy">  {{ form.as_p }} </button>
+        <br>
         <button class="speedy" type="submit">Upload</button> 
     </form> 
     </div>
+    
+  
+    <div class="beyblade"> 
+        <h3>Your Product</h3>
     </div>
+    <h1>
+
+
+
+<div class="product">
+    <img img src="{{ img_url }}" id="food_image" width="231" height="231" alt="{{item.name}} image"> 
+</div>
+
+<!-- ADD BUTTON -->
+<div class='speedy'>
+<form action="/addItemBarcode/{{item.id}}" style="display:inline;" method="POST">{% csrf_token %}
+  <input type="submit" value="Add to list">
+</form>
+</div>
+
+    <h3>Product</h3>
+    <p>{{data.product_name}}</p>
     
-    
-    
+    <h3>Nutrients</h3>
+    <div class="left">
+    <p>
+      {{ data.nutrition_facts}}
+    </p>
+
+    <h3>Ingredients</h3>
+    <div class="left">
+    <p>
+      {{ data.ingredients}}
+    </p>
+
 </body> 
 </html> 
