--- a/healthez_site/healthez_app/templates/images_result.html
+++ b/healthez_site/healthez_app/templates/images_result.html
@@ -30,10 +30,10 @@
     <nav id="nav-bar">
       <ul>
         <li>
-          <a class="nav-link" href="#Home"><b>Home</b></a>
+          <a class="nav-link" href="./#home"><b>Home</b></a>
         </li>
         <li>
-          <a class="nav-link" href="#About"><b>About</b></a>
+          <a class="nav-link" href="./#About"><b>About</b></a>
         </li>
       </ul>
     </nav>
